Fix app layout css which had overflows on dashboard page

--- a/microservices/app/imports/client/components/Page/Page.scss
+++ b/microservices/app/imports/client/components/Page/Page.scss
@@ -3,6 +3,7 @@
 
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 
   min-height: 100%;
   margin: -16px;
@@ -21,7 +22,7 @@
 
   width: 100%;
   width: calc(
-  100% - 250px - 32px
+    100% - 250px - 32px
   ); /* Side-nav width, careful, not updated with variable */
   height: 64px;
   padding: 0 16px;
